@@ -114,6 +114,9 @@
 	Fixed skipping of file move during merging aborting the whole operation.
 	Thanks to aleksejrs.
 
+	Fixed expansion of abbrevs that leave command-line mode.  Patch by
+	filterfalse.
+
 0.13-beta to 0.13 (2023-04-04)
 
 	Made "withicase" and "withrcase" affect how files are sorted before
